--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,8 @@ buildscript {
 
         //AndroidX core RN https://developer.android.com/jetpack/androidx/releases/core
         androidX = [
-                lib: "androidx.core:core-ktx:1.9.0"
+                lib : "androidx.core:core-ktx:1.9.0",
+                test: "androidx.test:core:1.5.0"
         ]
 
         //Lifecycle RN https://developer.android.com/jetpack/androidx/releases/lifecycle#2.5.1
